--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/fav/manifest.json" />
   <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/fav/favicon.ico" />
 
+<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto|Ubuntu" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comfortaa|Montserrat|Slabo+27px" rel="stylesheet">
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>redux-jumpoff</title>
+<title>%REACT_APP_WEBSITE_NAME%</title>
 </head>
 
 <body>
